Update tsconfig.json to specify file inclusions and exclusions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
     "skipLibCheck": true,
     "outDir": "./"
   },
+  "files": ["index.ts"],
+  "exclude": ["node_modules", "index.test.ts"],
   "include": ["index.ts"]
 }
