Update build configuration and packaging settings
* Add `files` field in package.json to include `index.js` and `index.d.ts`
* Enable TypeScript declaration generation in tsconfig.json
* Update .gitignore to exclude `index.js` and `index.d.ts`

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "scripts/test",
     "prepare": "npm test && npm run build"
   },
+  "files": [
+    "index.js",
+    "index.d.ts"
+  ],
   "dependencies": {
     "monadical": "4.5.3"
   },
