--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -21,5 +21,6 @@ jobs:
         with:
           node-version: 22.13.1
           cache: 'yarn'
+      - run: corepack enable
       - run: yarn install
       - run: npm test
