Update Corepack setup for Yarn in unit tests workflow

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -21,6 +21,6 @@ jobs:
         with:
           node-version: 22.13.1
           cache: 'yarn'
-      - run: corepack enable
+      - run: corepack prepare yarn@4.6.0 --activate
       - run: yarn install
       - run: npm test
