Install Corepack if missing in unit tests GitHub Actions workflow

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -21,6 +21,8 @@ jobs:
         with:
           node-version: 22.13.1
           cache: 'yarn'
+      # Installs Corepack if missing
+      - run: npm i -g corepack
       - run: corepack prepare yarn@4.6.0 --activate
       - run: yarn install
       - run: npm test
