--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -22,5 +22,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 22.13.1
+          cache: 'yarn'
       - run: yarn install
       - run: npm test
